--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dine Ease</title>
-    <link href="./index.css" type="text/css" rel="stylesheet">
-</head>
-<body>
-    <div id="root">Not Working</div>
+    <link href="./index.css" type="text/css" rel="stylesheet" />
+  </head>
+  <body>
+    <div id="root">⚠️ Oops! Something's not working...</div>
+
     <script type="module" src="App.js"></script>
-</body>
+  </body>
 </html>
